--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,500;1,600;1,700&display=swap');
+
 *{
     padding: 0;
     margin: 0;
+    color: #fff;
 }
 
 body{
@@ -9,9 +11,8 @@ body{
     background-size: 300% 300%;
     font-family: 'Poppins', sans-serif;
     display: flex;
-    justify-content: center;
-    color: #fff;
-    height: auto; /*ATENÇÃO*/
+    justify-content: center; 
+    height: auto; 
     width: 100%;
     animation: gradient 8s ease alternate infinite;
     padding-top: 1%;
@@ -20,15 +21,13 @@ body{
 
 main{
     width: 70%;
-    height:100%; /*ATENÇÃO*/
+    height:100%;
     border: 2px solid #fff;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 0 1%;
-    border-radius: 8px;
-
-    
+    border-radius: 8px;   
 }
 
 
@@ -46,7 +45,6 @@ main{
     font-size: 300%;
 }
 
-
 .content{
     width: 100%;
     height: 100%;
@@ -55,7 +53,11 @@ main{
     align-items: flex-start;
     padding: 0% 3%;
     line-height: 40px;
+    padding-bottom: 5px;
+}
 
+.content h1{
+    margin-bottom: 7px;
 }
 
 .content hr{
@@ -64,10 +66,26 @@ main{
     margin-bottom: 2%;
 }
 
+.icons{
+    font-size: 30px;
+}
+
+.content .icons a{
+    margin-right: 6px;
+}
+
+.sub-info{
+    font-size: 14px;
+    margin-left: 15px;
+}
+
+.content .content-obj{
+    text-align: justify;
+}
+
 @keyframes gradient {
     0%{
         background-position: 0 50%;
-
     }
 
     50%{
@@ -78,3 +96,25 @@ main{
         background-position: 0 50%;
     }
 }
+
+@media (max-width: 420px){
+    main{
+        width: 93%;
+    }
+
+    .title h1{
+        font-size: 250%;
+        text-align: center;
+        margin-bottom: 2px;
+    }
+
+    .content h1{
+        font-size: 169%;
+    }
+
+    body{
+        animation: gradient 5s ease alternate infinite;
+    }
+
+}
+
